<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Planner</string>
    <string name="app_name_full">Basic Planner</string>
    
    <string name="view_day">Day</string>
    <string name="view_week">Week</string>
    <string name="view_month">Month</string>
    <string name="view_year">Year</string>
    
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_title">Title *</string>
    <string name="event_notes">Notes</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">End Time</string>
    <string name="event_recurring">Recurring</string>
    <string name="event_recurring_until">Until</string>
    <string name="event_recurring_forever">Forever</string>
    
    <string name="recurrence_none">None</string>
    <string name="recurrence_daily">Daily</string>
    <string name="recurrence_weekly">Weekly</string>
    <string name="recurrence_monthly">Monthly</string>
    <string name="recurrence_yearly">Yearly</string>
    
    <string name="add_todo">Add To-Do</string>
    <string name="edit_todo">Edit To-Do</string>
    <string name="todo_title">Task *</string>
    <string name="todo_for_day">For this day only</string>
    <string name="todo_move_next">Move to next day until done</string>
    <string name="todo_for_week">For this week only</string>
    <string name="todo_move_next_week">Move to next week until done</string>
    
    <string name="week_number">Week %d</string>
    <string name="week_dates">%s – %s</string>
    
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="settings_date_format">Date format</string>
    <string name="settings_first_day">First day of week</string>
    <string name="settings_monday">Monday</string>
    <string name="settings_sunday">Sunday</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    
    <string name="no_events">No events</string>
    <string name="no_todos">No to-dos</string>
    <string name="todos_for_day">To-Do:</string>
    <string name="todos_for_week">To-Do for the Week:</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="settings_completed_tasks">Completed tasks</string>
    <string name="settings_completed_move_bottom">Move to bottom of list</string>
    <string name="settings_completed_do_nothing">Do nothing</string>
    <string name="settings_completed_remove">Remove</string>
    
    <string name="view_tasks">Tasks</string>
    <string name="tasks_today">To do:</string>
    <string name="tasks_week">To do for this week</string>
    <string name="tasks_month">Tasks for the month</string>
    <string name="tasks_year">Goals for the year</string>
    <string name="add_task">Add Task</string>
    <string name="task_scope_label">Add to:</string>
    <string name="task_scope_day">Today</string>
    <string name="task_scope_week">This week</string>
    <string name="task_scope_month">This month</string>
    <string name="task_scope_year">This year</string>
</resources>
